# liteeditor - plugin

liteeditor_sources = [
  'liteeditorplugin.cpp',
  'liteeditor.cpp',
  'liteeditorfile.cpp',
  'liteeditorfilefactory.cpp',
  'liteeditoroption.cpp',
  'liteeditoroptionfactory.cpp',
  'liteeditorwidgetbase.cpp',
  'liteeditorwidget.cpp',
  'litecompleter.cpp',
  'litewordcompleter.cpp',
  'liteeditormark.cpp',
  'highlightermanager.cpp',
  'katehighlighterfactory.cpp',
  'codecompleter.cpp',
  'functiontooltip.cpp',
  'faketooltip.cpp',
  'snippetapi.cpp',
  'wordapi.cpp',
  'editorapimanager.cpp',
  'katetextlexer.cpp',
]

liteeditor_headers = [
  'liteeditorplugin.h',
  'liteeditor_global.h',
  'liteeditor.h',
  'liteeditorfile.h',
  'liteeditorfilefactory.h',
  'liteeditoroption.h',
  'liteeditoroptionfactory.h',
  'liteeditorwidgetbase.h',
  'liteeditorwidget.h',
  'litecompleter.h',
  'litewordcompleter.h',
  'liteeditormark.h',
  'highlightermanager.h',
  'katehighlighterfactory.h',
  'codecompleter.h',
  'functiontooltip.h',
  'faketooltip.h',
  'snippetapi.h',
  'wordapi.h',
  'editorapimanager.h',
  'katetextlexer.h',
]

liteeditor_gen = qt6_mod.preprocess(
  include_directories: plugin_inc,
  moc_headers: liteeditor_headers,
  ui_files: 'liteeditoroption.ui',
  qresources: 'liteeditor.qrc',
)

shared_module('liteeditor',
  liteeditor_sources,
  liteeditor_gen,
  name_prefix: '',
  include_directories: [global_inc],
  dependencies: [qt_dep],
  link_args: plugin_link_args,
  install: true,
  install_dir: plugin_install_dir,
)
